fixed scroll in feature page(scroll-snap-align for slides)

--- a/src/components/features/component/feature/feature.less
+++ b/src/components/features/component/feature/feature.less
@@ -12,6 +12,7 @@
 	-moz-margin-end: 3%;
 	-webkit-margin-end: 3%;
 	margin-inline-end: 3%;
+	scroll-snap-align: end;
 	border-radius: 15px;
   box-shadow: 0 6px 8px 0 rgba(41, 41, 204, 0.16);
 }
